# DW-666

./: .gitignore  Cargo.toml  Embed.toml  README.md  b  memory.x  openocd.cfg  openocd_blackpill.cfg  rustfmt.toml  watch_rtt.sh
.cargo/: config
.run/: dw-666 (debug).run.xml  dw-666 (release).run.xml  router (debug).run.xml  router (release).run.xml  usbmidi-route.run.xml
alloc/: Cargo.toml
alloc/src/: lib.rs
atsamd-usb-host/: Cargo.toml
atsamd-usb-host/src/: error.rs  host.rs  lib.rs  pipe.rs
atsamd-usb-host/src/pipe/: addr.rs  table.rs
atsamd-usb-host/src/usb_host/: address.rs  control.rs  descriptor.rs  device.rs  endpoint.rs  mod.rs  parser.rs
embedded-midi/: Cargo.toml
embedded-midi/src/: lib.rs  message.rs  note.rs  packet.rs  status.rs
examples55/: crash.rs
include/: lv_conf.h
midi/: Cargo.toml
midi/src/: lib.rs  message.rs  note.rs  packet.rs  parser.rs  status.rs  u14.rs  u4.rs  u6.rs  u7.rs
router/: Cargo.toml  Embed.toml  link.x  memory.x
router/.cargo/: config
router/src/: filter.rs  main.rs  route.rs  sysex.rs  time.rs
router/src/apps/: blinky_beat.rs  bounce.rs  dw6000_control.rs  lfo.rs
router/src/devices/: mod.rs
router/src/devices/arturia/: beatstep.rs  mod.rs
router/src/devices/korg/: dw6000.rs  mod.rs
router/src/devices/sequential/: evolver.rs  mod.rs
router/src/port/: mod.rs  serial.rs  usb.rs
runtime/: Cargo.toml
runtime/src/: allocator.rs  array_queue.rs  exec.rs  lib.rs  log_defmt.rs  log_rtt.rs  log_serial.rs  mutex.rs  pri_queue.rs  resource.rs  shared.rs  spin.rs  spin_mutex.rs  time.rs  waker_set.rs
src/: app.rs  clock.rs  display.rs  dw6000_control.rs  event.rs  filter.rs  global.rs  gnalloc.rs  hid.rs  input.rs  main.rs  midi.rs  output.rs  route.rs  rtc.rs  state.rs  sysex.rs  time.rs  usb.rs  usbh_midi.cpp
src/apps/: blinky_beat.rs  bounce.rs  dw6000_control.rs  dw6_control.rs  lfo.rs  mod.rs
src/device/: beatstep.rs  mod.rs
src/devices/: beatstep.rs  dsi_evolver.rs  korg_dw6000.rs  mod.rs
src/devices/arturia/: beatstep.rs
src/devices/korg/: dw6000.rs
src/devices/sequential/: evolver.rs
src/display/: gpio8a.rs  gpio8b.rs  gui.rs  mod.rs  nogpio.rs  rotate.rs
src/midi/: event.rs  filter.rs  message.rs  mod.rs  notes.rs  packet.rs  parser.rs  route.rs  serial.rs  status.rs  sysex.rs  u14.rs  u4.rs  u6.rs  u7.rs  usb.rs  writer.rs
src/midi/usb/: device.rs  event.rs  mod.rs
src/port/: serial.rs  usb.rs
sync-thumbv6m/: Cargo.toml
sync-thumbv6m/src/: lib.rs  spin.rs
sync-thumbv6m/src/alloc/: arc.rs
usb_serial/: Cargo.toml
usb_serial/.cargo/: config
usb_serial/src/: main.rs
usbhost/: Cargo.toml  Embed.toml  memory.x  openocd.cfg  stlink.cfg
usbhost/.cargo/: config
usbhost/src/: exec.rs  main.rs  midi_driver.rs  midihost.rs  usb_midi.rs
usbhost/src/port/: serial.rs  usb.rs
woke/: Cargo.toml
woke/examples/: howdy.rs
woke/src/: lib.rs
