[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"
name = "usbmidi-route"
readme = "README.md"
version = "0.1.0"
# use newer Cargo feature resolver
resolver = "2"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"

embedded-hal = "0.2"
embedded-graphics = "0.6"
#embedded-text = "0.4.1"
usb-device = "0.2"

num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }

nb = "1"
bitfield = "0.13"
spin = "0.9"
micromath = "1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
#lvgl = "0.5.2"
lvgl = { path = "../lvgl-rs/lvgl",  default-features = false }
cstr_core = "0.2.3"

#ssd1306 = "0.4"
#display-interface = "0.4"

#heapless = {git = "https://github.com/japaric/heapless.git", branch = "const_generics", features = ["ufmt-impl", "cas"]}
#ufmt = "0.1"

buddy-alloc = "0.4"
hashbrown = "0.11"
nanorand = { version = "0.5", default-features = false, features = ["wyrand"] }

stm32f4 = { version = "0.13", features = ["stm32f411", "rt"], optional = true }
#using git version see below
stm32f4xx-hal = { version = "0.9", features = ["stm32f411", "rt", "usb_fs"], optional = true }

ili9486 = { path = "../ili9486-rs" }
display-interface = "0.4"
display-interface-parallel-gpio = "0.6.0"
tinytga = { version = "0.3", features = ["graphics"] }

[features]
default = ["stm32f4xx"]
stm32f4xx = ["stm32f4", "stm32f4xx-hal"]

[[bin]]
bench = false
name = "usbmidi-route"
test = false

[profile.dev]
debug = true
opt-level = "z"
lto = true
panic = "abort"
#debug-assertions = true
#incremental = false
#opt-level = 3
#overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "z"
debug = false
lto = true
panic = "abort"
#rpath = false
