[workspace]
members = ["runtime", "router", "embedded-midi"]
resolver = "2"

[profile.dev]
debug = true
opt-level = "z"
#lto = true
panic = "unwind"
#debug-assertions = true
#incremental = false
#opt-level = 3
#overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "z"
debug = false
lto = true
panic = "abort"
#rpath = false
