[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"
name = "DW_666"
readme = "README.md"
version = "0.1.0"
# use newer Cargo feature resolver

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
#rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
#rtic-monotonics = { version = "1.0.0" }

embedded-hal = "0.2"
#fugit = "0.3"
#embedded-time = "0.12"
#embedded-graphics = "0.6"
#embedded-text = "0.4.1"
usb-device = "0.2"
defmt = "0.3"

num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }

nb = "1"
bitfield = "0.14.0"
micromath = "1"

#lvgl = "0.5.2"
#lvgl = { path = "../../lvgl-rs/lvgl", default-features = false }
#cstr_core = "0.2"

#ssd1306 = "0.4"

heapless = "0.7"

buddy-alloc = "0.5"
hashbrown = "0.14"
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }

stm32f4xx-hal = { version = "0.17", features = ["stm32f411", "rt", "usb_fs"] }

critical-section = "1.1"

#ili9341 = "0.4"
#display-interface = "0.4"
#
#display-interface-spi = "0.4.1"
#tinytga = { version = "0.3", features = ["graphics"] }

embedded-midi = { path = "embedded-midi", features = ["defmt"] }
runtime = { path = "runtime" }

[[bin]]
bench = false
name = "DW_666"
test = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "z"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations