[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"
name = "minimidi"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"

embedded-hal = "0.2"
usb-device = "0.2"
heapless = "0.7"
num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }

nb = "1"
bitfield = "0.13"

rtt-target = { version = "0.3", features = ["cortex-m"], optional = true }
panic-rtt-target = { version = "0.1", features = ["cortex-m"], optional = true }

[features]
#default  = ["port", "rtt"]
#default  = ["atsamd"]

#port = ["stm32f4xx-hal"]
#atsamd = ["atsamd-hal"]
rtt = ["rtt-target", "panic-rtt-target"]
