[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"
name = "minimidi"
readme = "README.md"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
usb-device = "0.2"
heapless = "0.7"
num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }

nb = "1"
bitfield = "0.13"

rtt-target = { version = "0.3", features = ["cortex-m"] }

