[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"
name = "usbmidi-route"
readme = "README.md"
version = "0.1.0"
# use newer Cargo feature resolver


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

embedded-hal = "0.2"
#embedded-time = "0.12"
#embedded-graphics = "0.6"
#embedded-text = "0.4.1"
usb-device = "0.2"

num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }

nb = "1"
bitfield = "0.13"
spin = "0.9"
micromath = "1"
#rtt-target = { version = "0.3", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
#lvgl = "0.5.2"
#lvgl = { path = "../../lvgl-rs/lvgl", default-features = false }
#cstr_core = "0.2"

#ssd1306 = "0.4"

heapless = "0.7"
#ufmt = "0.1"

buddy-alloc = "0.4"
hashbrown = "0.11"
#nanorand = { version = "0.5", default-features = false, features = ["wyrand"] }

stm32f4xx-hal = { version = "0.13", features = ["stm32f411", "rt", "usb_fs"] }

#ili9341 = "0.4"
#display-interface = "0.4"
#
#display-interface-spi = "0.4.1"
#tinytga = { version = "0.3", features = ["graphics"] }

embedded-midi = { git = "https://github.com/fralalonde/embedded-midi.git", branch = "main", features = ["defmt"] }
#embedded-midi = { path = "../../embedded-midi", features = ["defmt"] }
runtime = { path = "../runtime" }

[[bin]]
bench = false
name = "usbmidi-route"
test = false

