[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2021"
name = "runtime"
readme = "README.md"
version = "0.1.0"

[dependencies]
woke = "0.0.4"
spin = "0.9"
fugit = "0.3"
critical-section = "1.1"

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "0.2"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
heapless  = "0.7"

hash32 = "0.2.1"
buddy-alloc = "0.5"
slotmap = { version = "1.0", default-features = false }