[package]
name = "usb_serial"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.6"
trinket_m0 = { version = "0.10", features = ["usb", "rt"] }
usbd-serial = "0.1"
usb-device = "0.2"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
