[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"
name = "usbhost"
readme = "README.md"
version = "0.1.0"
# use newer Cargo feature resolver
resolver = "2"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"

trinket_m0 = { version = "0.9", features = ["unproven", "usb", "rt"] }
panic-halt = "0.2.0"

embedded-hal = "0.2"
usb-device = "0.2"

num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }
nb = "1"

heapless = "0.7"
ufmt = "0.1"

minimidi = { path = "../midi", default-features = false, feature = ["atsamd"] }
atsamd-usb-host = { path = "../../atsamd-usb-host", default-features = false, feature = ["atsamd21e"] }

[dependencies.atsamd-hal]
version = "0.12"
default-features = false

[dependencies.smart-leds]
version = "0.3"

[dev-dependencies]
panic-halt = "0.2"

[[bin]]
bench = false
name = "usbhost"
test = false

[profile.dev]
debug = true
opt-level = "z"
lto = true
panic = "abort"
#debug-assertions = true
#incremental = false
#opt-level = 3
#overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "z"
debug = false
lto = true
panic = "abort"
#rpath = false
