[package]
name = "usbhost"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
cortex-m-rtic = "0.5"
heapless = "0.7"

nb = "0.1"
atsamd-hal = {version = "0.12", features = ["usb", "samd21e-rt", "unproven"] }
cortex-m-rt = "0.6"

rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }

trinket_m0 = {version = "0.9", features = ["usb", "rt", "unproven"] }
usb-host = "0.1.2"
atsamd-usb-host = { path = "../../atsamd-usb-host", features = ["samd21e"] }
log = "0.4"

minimidi = { path  = "../midi" }
