[package]
name = "usbhost"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
heapless = "0.7"
nb = "0.1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
atsamd-hal = { version = "0.13", features = ["usb", "samd21e-rt", "rtic"] }

rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }

trinket_m0 = { version = "0.10", features = ["usb", "rt", "unproven"] }
atsamd-usb-host = { path = "../atsamd-usb-host", features = ["samd21e"] }
log = "0.4"
async-trait = "0.1.51"
atomic-polyfill = "0.1"

minimidi = { path = "../midi" }
runtime = { path = "../runtime" }

embedded-time = { path = "../../embedded-time" }
buddy-alloc = "0.4"
embed-alloc = { path = "../alloc" }
sync-thumbv6m = { path = "../sync-thumbv6m", version = "0.2" }

[dependencies.rtic-monotonic]
version = "=0.1.0-rc.1"


